# space-share

./: .gitignore  CMakeLists.txt  CMakeTools.cmake  CodingStyle.md  README.md  test.py
Application/NetShare/Binding/: CMakeLists.txt
Application/NetShare/Binding/Java/: CMakeLists.txt
Applications/SystemShare/: CMakeLists.txt
Applications/SystemShare/Scripts/: sys_share_app.py  sys_share_format.py  sys_share_test.py  test.py
Applications/SystemShare/Servers/: out0  out1  out10  out12  out14  out19  out2  out22  out23  out24  out29  out3  out34  out35  out37  out38  out4  out7  out8  out9
Applications/SystemShare/Source/: main.cpp
Applications/SystemShare/nbproject/: Makefile-Debug-64.mk  Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug-64.bash  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Binding/: CMakeLists.txt
Bindings/BufferShare/: CMakeLists.txt
Bindings/BufferShare/Java/: CMakeLists.txt
Share/: CMakeLists.txt
Share/SConnector/: CMakeLists.txt
Share/SConnector/SDecoded/: CMakeLists.txt
Share/SConnectors/: CMakeLists.txt
Share/SConnectors/SDecoded/: CMakeLists.txt
Share/SConnectors/SEncoded/: CMakeLists.txt
Share/SFunction/: CMakeLists.txt  SDecode.h  SEncode.h
Share/SFunctions/: CMakeLists.txt  SDecode.h  SDecodeFunction.h  SEncode.h  SEncodeFunction.h
Share/SInterface/: CMakeLists.txt  SBufferShare.cpp  SBufferShare.h  SMachine.cpp  SMachine.h  SStreamCodec.h
Share/SInterfaces/: CMakeLists.txt  SBufferShare.cpp  SBufferShare.h  SMachine.cpp  SMachine.h  SStreamCodec.h
Share/SKernel/: CMakeLists.txt  SCache.h  SCodec.h  SConnector.cpp  SConnector.h  SDocument.cpp  SDocument.h  SEnergy.h  SFunction.h  SModule.cpp  SModule.h
Share/SKernel/SCodec/: CMakeLists.txt  SCodec.cpp  SCodec.h  SCodecDecoder.h  SCodecEncoder.h  SCodecStamp.cpp  SCodecStamp.h  SDecoderCodec.h  SEncoderCodec.h  SEngineCodec.cpp  SEngineCodec.h  SStampCodec.cpp  SStampCodec.h
Share/SKernel/SCodecV1/: SCodec.cpp  SCodec.h  SCodecDecoder.h  SCodecEncoder.h
Share/SKernel/SCodecV2/: SCodec.cpp  SCodec.h  SCodecStamp.cpp  SCodecStamp.h
Share/SKernel/SModule/: CMakeLists.txt  MConnectors.h  MFunctions.h  MProcess.h  MProcessTransform.cpp  MProcessYpsilon.cpp  MProperties.h  MYpsilon.h
Share/SModule/: CMakeLists.txt  MBase.h  MBasis.h  MConnectors.h  MDefault.h  MFunctions.h  MProcessTransform.cpp  MProperties.h  MSpliter.h  MSpread.h
Share/SModules/: CMakeLists.txt  MConnectors.h  MFunctions.h  MProperties.h  SBaseModule.h  SSpliterModule.h  SSpreadModule.h
Share/SModules/SHelpers/: SConnectors.h  SFunctions.h  SProperties.h
Space/: CMakeLists.txt
Space/SHelper/: CMakeLists.txt  SBase64.cpp  SBase64.h  SCompare.h  SHash.h  SItertool.h  SRandom.h
Space/SHelpers/: CMakeLists.txt  SBase64.cpp  SBase64.h  SCompare.h  SHash.cpp  SHash.h  SItertool.h  SRandom.h  STools.h
Space/SKernel/: CMakeLists.txt  SAddress.cpp  SAddress.h  SBimap.h  SBuffer.h  SCType.h  SChain.h  SChannel.h  SClock.h  SCommand.1.h  SCommand.h  SContainer.cpp  SContainer.h  SFrame.cpp  SFrame.h  SHash.cpp  SLocation.h  SLog.cpp  SLog.h  SMonitor.h  SProcess.h  SQueue.h  SRandom.h  SResource.h  SRoad.h  STask.h  SText.h  STools.h  SVariable.cpp  SVariable.h
Space/SKernel/SAndroid/: CMakeLists.txt  SAndroidLog.h
Space/SKernel/SHelper/: SCType.h
Space/SKernel/SLinux/: CMakeLists.txt  Makefile  SLinuxLog.h  SLinuxTask.cpp  SLinuxTask.h  SLog.cpp  SMonitor.cpp  SMonitorHandler.cpp  SMonitorHandler.h  STask.cpp
Space/SMonitor/: CMakeLists.txt  SCommandMonitor.h  SContainerMonitor.h  SResourceMonitor.h  SRoadMonitor.h  SYpsilonMonitor.h
Space/SMonitor/SLinux/: CMakeLists.txt  SLinuxMonitor.h  SLinuxResourceMonitor.h  SLinuxRoadMonitor.h  SMonitorHandler.cpp  SMonitorHandler.h
Space/SMonitors/: CMakeLists.txt  SCommandMonitor.h  SContainerMonitor.h  SResourceMonitor.h  SRoadMonitor.h
Space/SResource/: CMakeLists.txt  SDirectoryResource.h  SEventResource.h  SFileResource.h  SIRCResource.cpp  SIRCResource.h  SLocalResource.h  SPollResource.h  SRemoteResource.h  SSocketResource.h
Space/SResource/SExtensions/: STextExtension.h
Space/SResource/SLinux/: CMakeLists.txt  SDirectoryResource.cpp  SEventResource.cpp  SFileResource.cpp  SLinuxDirectory.cpp  SLinuxDirectory.h  SLinuxEvent.cpp  SLinuxEvent.h  SLinuxFile.cpp  SLinuxFile.h  SLinuxHandler.h  SLinuxIRC.cpp  SLinuxIRC.h  SLinuxPoll.cpp  SLinuxPoll.h  SLinuxResource.cpp  SLinuxResource.h  SLinuxSocket.cpp  SLinuxSocket.h  SLocalResource.cpp  SPollResource.cpp  SRemoteResource.cpp  SResourceHandler.h
Space/SResources/: CMakeLists.txt  SDirectoryResource.h  SEventResource.h  SFileResource.h  SIRCResource.cpp  SIRCResource.h  SLocalResource.h  SRemoteResource.h  SSocketResource.h
Space/SResources/SExtensions/: STextExtension.h
Space/SResources/SLinux/: CMakeLists.txt  SDirectoryResource.cpp  SEventResource.cpp  SFileResource.cpp  SLocalResource.cpp  SRemoteResource.cpp
Test/: CMakeLists.txt  GoogleTest.cmake  README.md  TestSample.cpp
Test/PerformanceTestShare/: main.cpp
Test/PerformanceTestShare/nbproject/: Makefile-variables.mk  Package-Release.bash
Test/TestIrcServers/nbproject/: Makefile-Debug.mk  Makefile-impl.mk  Package-Release.bash
Test/TestLegacy/: CMakeLists.txt
Test/TestLegacy/TestShare/: main.cpp
Test/TestShare/: CMakeLists.txt  main.cpp
Test/TestShare/Sinterface/: STestBasic.cpp  STestBasic.h
Test/TestShare/TestConnector/: TestDecodedMessageFile.cpp  TestDecodedMessageUDP.cpp
Test/TestShare/TestInterface/: TestBufferShare.cpp  TestMachine.cpp
Test/TestShare/TestKernel/: TestCodec.cpp  TestModule.cpp
Test/TestShare/TestModule/: TestSpliter.cpp  TestSpread.cpp
Test/TestSpace/: CMakeLists.txt
Test/TestSpace/TestKernel/: TestAddress.cpp  TestBuffer.cpp  TestCommand.cpp  TestContainer.cpp  TestFrame.cpp  TestProcess.cpp  TestVariable.cpp
Test/TestSpace/TestMonitor/: TestResourceMonitor.cpp  TestRoadMonitor.cpp
Test/TestSpace/TestResource/: TestFileResource.cpp  TestLocalResource.cpp  TestRemoteResource.cpp
(+363 files in other folders)
